fix(styling): remove hidden overflow

--- a/next-tavla/src/Shared/styles/global.css
+++ b/next-tavla/src/Shared/styles/global.css
@@ -11,7 +11,6 @@ html {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.2;
-    overflow: hidden;
 }
 
 h3 {
